# framework-task-comparison

./: README.md
harbor/: .gitignore  README.md  instruction.md  task.toml
harbor/environment/: Dockerfile
harbor/environment/linear_data/: issues.json
harbor/environment/linear_mcp/: server.py
harbor/environment/orders_api/: models.py
harbor/jobs/2026-04-05__15-33-48/: config.json  (+1 more)
harbor/solution/: solve.sh
harbor/tests/: test.sh
hud/: .dockerignore  .gitignore  Dockerfile.hud  README.md  env.py  hud.lock.yaml  pyproject.toml  run_tasks.py  runtime.py  task_catalog.py  tasks.py
hud/data/linear_example_task/orders_github_data/: issues.json  repo.json
hud/data/linear_example_task/orders_linear_data/: issues.json  teams.json
hud/linear_mcp/: __init__.py  data.py  server.py
hud/servers/: __init__.py  constants.py
hud/servers/mcp/: __init__.py  base.py
hud/servers/mcp/github/: __init__.py  frontend.py  mock_client.py  server.py  services.py
hud/servers/mcp/github/ui/: layout.html  style.css
hud/servers/mcp/linear/: __init__.py  data.py  frontend.py  models.py  server.py
hud/servers/mcp/linear/ui/: layout.html  style.css
hud/source/orders_api/: app.py  database.py
inspect/: .gitignore  README.md  orders_incident.py  pyproject.toml
verifiers/: .gitignore  README.md  pyproject.toml
verifiers/src/orders_incident_verifiers/: __init__.py  orders_incident.py
verifiers/src/orders_incident_verifiers/assets/orders_api/services/: inventory_service.py  order_service.py
verifiers/src/orders_incident_verifiers/assets/tests/: test_order_pricing.py
(+9 files in other folders)
