[project]
name = "framework-task-comparison-hud"
version = "0.1.0"
description = "HUD implementation of the orders/Linear framework comparison task"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hud-python>=0.5.28",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["servers"]

[tool.hud]
name = "orders-incident-hud"
image = "orders-incident-hud:dev"
