[project]
name = "orders-incident-verifiers"
version = "0.1.0"
description = "Minimal Prime Verifiers port of the HUD orders incident demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "pytest>=9.0.2",
    "verifiers==0.1.10",
]

[project.scripts]
orders-incident-verifiers = "orders_incident_verifiers:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
